# osask

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  README.md  appveyor.yml   bootstrap  configure.ac  cross-i686-w64-mingw32.sh  cross-x86_64-w64-mingw32.sh  index.html  params.json  rules.mk
20GO/libnask/: Makefile.am  libnask.cpp  libnask.hpp  ll.cpp  ll.hpp  ll_lib.cpp  nask.cpp  nask.hpp  nask_functional_test.sh  nask_unit_test  nask_unit_test.cpp  nasktest.cpp
20GO/libnask/data/: 01_nasfile.nas  02_nasfile.nas  03_nasfile.nas  04_nasfile.nas  Makefile.am
20GO/toolstdc/: Makefile.am  gas2nask.cpp  golib00.cpp  helloos.nas  nask.cpp  naskcnv0.cpp  osask.mk  sjisconv.cpp
28GO/28GO_K/: Makefile.am  Makefile.org  guigui00.hpp
28GO/28GO_K/Nasuka/: Makefile.am  ll.c
28GO/28GO_K/akusA/: Makefile.am  akusA.cpp  memo.txt
28GO/28GO_K/bim2g01/: Makefile.am  bim2g01.cpp
28GO/28GO_K/bim2hrb/: Makefile.am  bim2hrb.cpp
28GO/28GO_K/bin2obj/: Makefile.am  bin2obj.cpp
28GO/28GO_K/bin2ucc/: Makefile.am  bin2ucc.cpp
28GO/28GO_K/branches/K_0033_test/: Makefile
28GO/28GO_K/branches/K_0033_test/Nasuka/: Makefile  Nasuka_sub.c  go_lib.h
28GO/28GO_K/branches/K_0033_test/akusA/: Makefile  aksuA.c  akusA.c
28GO/28GO_K/branches/K_0033_test/bim2g01/: Makefile
28GO/28GO_K/branches/K_0033_test/bim2hrb/: Makefile
28GO/28GO_K/branches/K_0033_test/bin2obj/: Makefile  bin2obj.c
28GO/28GO_K/branches/K_0033_test/bin2ucc/: Makefile  bin2ucc.c
28GO/28GO_K/branches/K_0033_test/cpy/: Makefile  make.bat
28GO/28GO_K/branches/K_0033_test/cpyc/: Makefile
28GO/28GO_K/branches/K_0033_test/doscmd/: Makefile.7
28GO/28GO_K/branches/K_0033_test/g01libc1/: bss1a1.nas  bss1a16.nas  g01_esi0.ask
28GO/28GO_K/branches/K_0033_test/gas2nask/: Makefile  gas2nask.c
28GO/28GO_K/branches/K_0033_test/gg00libc/: execcmd.ask  malloc.nas  readcsb.ask
28GO/28GO_K/branches/K_0033_test/go_lib/: Makefile
28GO/28GO_K/branches/K_0033_test/golib00/: Makefile
28GO/28GO_K/branches/K_0033_test/golibc/: Makefile.7
28GO/28GO_K/cpy/: cpy.ask
28GO/28GO_K/cpyc/: Makefile.am  Makefile.org  cpyc.cpp
28GO/28GO_K/doscmd/: MEMO.txt  Makefile.am  Makefile.org  doscmd.cpp
28GO/28GO_K/drv_osa/: Makefile.am  bim2bin.cpp  cc1main.cpp  cmdline.cpp  gas2nask.c  gas2nask.cpp  guigui00.hpp  naskmain.cpp  obj2bim.cpp  osamain.cpp  sjisconv.c  sjisconv.cpp
28GO/28GO_K/drv_stdc/: Makefile.am  cc1drv.cpp  cpp0main.cpp  drv_stdc.cpp  msgout_c.cpp  others.cpp  others.hpp  wfile_b.cpp  wfile_t.cpp
28GO/28GO_K/drv_w32/: Makefile.am  cc1drv.cpp  cc1main.cpp  cc1pmain.cpp  cpp0main.cpp  drv_w32.cpp  msgout.cpp  others.cpp  wfile_b.cpp  windows.hpp
28GO/28GO_K/funcs/: cc1sub.cpp  m_gasnas.cpp  m_golib.cpp  m_naskcv.cpp  m_sjiscv.cpp  nasksub.cpp
28GO/28GO_K/g01libc0/: Makefile.am  Makefile.org
28GO/28GO_K/g01libc1/: Makefile.org  bss1a2.nas  bss1a8.nas
28GO/28GO_K/g01libc1/g01lib_h/: guigui01.hpp  guigui01.rul
28GO/28GO_K/gas2nask/: Makefile.am  gas2nask.cpp
28GO/28GO_K/gg00libc/: Makefile.am  Makefile.org  putsjis0.ask  putstr.ask  readcsd.ask  stppth0.cpp
28GO/28GO_K/go_lib/: Makefile.am  abort.cpp  atof.cpp  atoi.cpp  calloc.cpp  dummy.cpp  fclose.cpp  feof.cpp  fgetc.cpp  fgets.cpp  fopen.cpp  fprintf.cpp  fputc.cpp  fputs.cpp  fread.cpp  fseek.cpp  ftell.cpp  fwrite.cpp  malloc.cpp  memcpy.cpp  mmmalloc.cpp  mmreallo.cpp  printf.cpp  qsort.cpp  realloc.cpp  sprintf.cpp  stdin.cpp  strdup.cpp  strlen.cpp  strtol.cpp  strtoul0.cpp  symalloc.cpp  ungetc.cpp  vfprintf.cpp  vsprintf.cpp
28GO/28GO_K/golib00/: Makefile.am  golib00.c  golib00.cpp
28GO/28GO_K/golibc/: Makefile.am  qsort.cpp  vsprintf.cpp
28GO/28GO_K/hrblib0a/: Makefile  Makefile.am  startup.cpp
28GO/28GO_K/include/: errno.h  go_lib.hpp  go_limits.hpp  go_stdarg.hpp  go_stdio.hpp  go_stdlib.hpp  go_string.hpp  stdarg.h  stddef_unknown.hpp  string.h
28GO/28GO_K/makefont/: Makefile.am  makefont.cpp
28GO/28GO_K/mtek2org/: Makefile.am  Makefile.org  mtek2org.c  mtek2org.cpp
28GO/28GO_K/nask/: Makefile.am  Nasuka.c  Nasuka.cpp  Nasuka_sub.c  Nasuka_sub.cpp  go_lib.hpp  ll.cpp  ll_lib.cpp  mmmalloc.cpp  nask.cpp
28GO/28GO_K/naskcnv0/: Makefile.am  Makefile.org  naskcnv0.cpp
28GO/28GO_K/obj2bim/: Makefile.am  obj2bim.cpp
28GO/28GO_K/osalink1/: Makefile  Makefile.am  osalink1.cpp
28GO/28GO_K/rjcg01/: Makefile.am  Makefile.org  rjcg01.cpp
28GO/28GO_K/sjisconv/: Makefile.am  Makefile.org  sjisconv.cpp
28GO/28GO_K/tags/K_0032/: make.bat
28GO/28GO_K/tekmin0/: Makefile.am  tekmin0.c  tekmin0.cpp
28GO/28GO_K/tekmin1/: Makefile.am  tekmin1.cpp
28GO/28GO_K/trunk/: Makefile  kl01readme.txt
28GO/28GO_K/trunk/Nasuka/: mmmalloc.c
28GO/28GO_K/trunk/bim2g01/: Makefile
28GO/28GO_K/trunk/bim2hrb/: bim2hrb.c
28GO/28GO_K/trunk/g01libc0/: startup.ask
28GO/28GO_K/trunk/g01libc1/: bss1a4.nas
28GO/28GO_K/trunk/gg00libc/: alloca.ask  decl2d3.ask  idiv.ask  imul.ask  initmdh1.nas  settime2.ask  stppth0.c
28GO/28GO_K/trunk/include/: rules.mak
28GO/28GO_K/trunk/obj2bin/: obj2bim.c
28GO/28GO_K/trunk/osalink1/: Makefile  osalink1.c  readme.txt
28GO/28GO_K/trunk/rjcg01/: rjcg01.c
28GO/28GO_K/w32clibc/: Makefile.am  fclose.cpp  fopen.cpp  fread.cpp  free.cpp  fseek.cpp  fwrite.cpp  malloc.cpp  startup.cpp
28GO/Asuka/: Makefile  Makefile.am  filepath.h  generator.cpp  generator.h  main.cpp  module.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  stringx.h  table.cpp  table.h  textmodule.cpp  tokendef.h
28GO/Asuka/tags/1.0/: Makefile  Makefile.org  mkmgw20.bat
28GO/Asuka/tags/1.1/: Makefile
28GO/Asuka/trunk/: main.cpp  module.h
28GO/aska/: Makefile.am  aska  asuka-test1.ask  filepath.hpp  generator.cpp  generator.hpp  macro.hpp  main.cpp  module.cpp  module.hpp  parser.hpp  stringx.hpp
28GO/asuka/: Makefile.am  README.txt  asuka  asuka-doc.texi  asuka-test1.ask  asuka.texi  filepath.cpp  filepath.hpp  generator.cpp  generator.hpp  macro.hpp  main.cpp  module.cpp  module.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  stringx.cpp  stringx.hpp  table.cpp  table.hpp  textmodule.cpp  textmodule.h  textmodule.hpp
(+689 files in other folders)
