bin_PROGRAMS  = asuka
asuka_SOURCES = filepath.cpp   \
		filepath.h     \
		generator.cpp  \
		generator.h    \
		macro.h	       \
		main.cpp       \
		makefile.gcc   \
		mkmgw20.bat    \
		module.cpp     \
		module.h       \
		parser.cpp     \
		parser.h       \
		scanner.cpp    \
		scanner.h      \
		stringx.cpp    \
		stringx.h      \
		table.cpp      \
		table.h	       \
		textmodule.cpp \
		textmodule.h   \
		tokendef.h    
