noinst_LTLIBRARIES	= libdrvosa.la
libdrvosa_la_LDFLAGS 	= -no-undefined -version-info 1:0:0
libdrvosa_la_SOURCES	= \
obj2bim.cpp		  \
cmdline.cpp		  \
.cpp1main.cpp		  \
naskmain.cpp		  \
bim2bin.cpp		  \
osamain.cpp		  \
o.hppers.hpp		  \
guigui00.hpp		  \
sji.cpponv.cpp		  \
gas2nask.cpp		  \
stdlib.hpp
