noinst_LTLIBRARIES	= libdrvosa.la
libdrvosa_la_LDFLAGS 	= -no-undefined -version-info 1:0:0
libdrvosa_la_SOURCES	= \
obj2bim.cpp		  \
cmdline.cpp		  \
cc1main.cpp		  \
naskmain.cpp		  \
bim2bin.cpp		  \
osamain.cpp		  \
others.hpp		  \
guigui00.hpp		  \
sjisconv.cpp		  \
gas2nask.cpp		  \
stdlib.hpp
