noinst_LTLIBRARIES	= libdrvosa.la
libdrvosa_la_CXXFLAGS	= -I$(top_builddir)/28GO/28GO_K/include
libdrvosa_la_LDFLAGS 	= -no-undefined -version-info 1:0:0
libdrvosa_la_LIBADD	= ../go_lib/libgolib.la
libdrvosa_la_SOURCES	= \
cmdline.cpp		  \
cc1main.cpp		  \
naskmain.cpp		  \
osamain.cpp		  \
others.hpp		  \
guigui00.hpp		  \
sjisconv.cpp		  \
gas2nask.cpp		  \
stdlib.hpp
