noinst_LTLIBRARIES	= libgolib.la
libgolib_la_LDFLAGS 	= -no-undefined -version-info 1:0:0
libgolib_la_SOURCES	= \
fwrite.cpp		  \
.cpplose.cpp		  \
st.cppat.cpp		  \
mmmall.cpp.cpp		  \
strlen.cpp		  \
abort.cpp			  \
call.cpp.cpp		  \
memmove.cpp		  \
printf.cpp		  \
fseek.cpp			  \
ldexp.cpp			  \
st.cp.hppr.cpp		  \
mmreallo.cpp		  \
symall.cpp.cpp		  \
qsort.cpp			  \
st.cppmp.cpp		  \
mall.cpp.cpp		  \
vfprintf.cpp		  \
strtol.cpp		  \
str.cppmp.cpp		  \
me.cp.hppr.cpp		  \
vsprintf.cpp		  \
st.cpppy.cpp		  \
fread.cpp			  \
fopen.cpp			  \
fprintf.cpp		  \
str.cppat.cpp		  \
strstr.cpp		  \
strtoul.cpp		  \
reall.cpp.cpp		  \
ftell.cpp			  \
atof.cpp			  \
fgets.cpp			  \
strdup.cpp		  \
fpu.cpp.cpp			  \
feof.cpp			  \
unge.cpp.cpp		  \
str.cpppy.cpp		  \
sprintf.cpp		  \
me.cppmp.cpp		  \
abs.cpp			  \
me.cpppy.cpp		  \
memset.cpp		  \
fge.cpp.cpp			  \
errno.cpp			  \
strspn.cpp		  \
rand.cpp			  \
strpbrk.cpp		  \
atoi.cpp			  \
str.cp.hppr.cpp		  \
st.cppspn.cpp		  \
frexp.cpp			  \
fputs.cpp			  \
strtoul0.cpp		  \
stdin.cpp			  \
dummy.cpp
