noinst_LTLIBRARIES	= libgolib.la
libgolib_la_LDFLAGS 	= -no-undefined -version-info 1:0:0
libgolib_la_CXXFLAGS	= -I$(top_builddir)/28GO/28GO_K/include
libgolib_la_SOURCES	= \
abort.cpp     		  \
abs.cpp		          \
atof.cpp	          \
atoi.cpp                  \
calloc.cpp                \
dummy.cpp	          \
errno.cpp                 \
fclose.cpp                \
feof.cpp                  \
fgetc.cpp	          \
fgets.cpp	          \
fopen.cpp	          \
fprintf.cpp	          \
fputc.cpp                 \
fputs.cpp	          \
fread.cpp	          \
frexp.cpp                 \
fseek.cpp	          \
ftell.cpp                 \
fwrite.cpp	          \
ldexp.cpp                 \
malloc.cpp	          \
memchr.cpp	          \
memcmp.cpp	          \
memcpy.cpp	          \
memmove.cpp               \
memset.cpp	          \
mmmalloc.cpp              \
mmreallo.cpp              \
printf.cpp                \
qsort.cpp	          \
rand.cpp	          \
realloc.cpp	          \
sprintf.cpp               \
stdin.cpp	          \
strcat.cpp	          \
strchr.cpp                \
strcmp.cpp	          \
strcpy.cpp                \
strcspn.cpp	          \
strdup.cpp	          \
strlen.cpp	          \
strncat.cpp               \
strncmp.cpp	          \
strncpy.cpp	          \
strpbrk.cpp               \
strrchr.cpp	          \
strspn.cpp                \
strstr.cpp	          \
strtol.cpp                \
strtoul.cpp	          \
strtoul0.cpp	          \
symalloc.cpp	          \
ungetc.cpp	          \
vfprintf.cpp	          \
vsprintf.cpp
