# programs
bin_PROGRAMS   = nask nasuka

#
# nask
#
nask_SOURCES	= \
nask.cpp

nask_CXXFLAGS   = -I$(top_builddir)/28GO/28GO_K/include
nask_LDADD	= ../drv_stdc/libdrvstdc.la ../go_lib/libgolib.la

#nask_LDADD	= \
#../drv_w32/libdrvw32.la

#SUBDIRS = ../drv_w32

# nasuka
nasuka_SOURCES = \
mmmall.cpp	 \
Nasuka.cpp	 \
go_lib.hpp	 \
Nasuka_sub.cpp	 \
ll_lib.cpp	 \
ll.cpp
